# AnnoSpat

./: .gitignore  README.md  setup.py
AnnoSpat/: ._classify_IMCcells.py  classify_IMCcells.py  run.py  sample_Rscript.R
AnnoSpat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AnnoSpat/data/: ._signatures_T1D_withImmuneCelltypes_withNegMarkers_d.csv
AnnoSpat/dependencies/: .___init__.py  ._cluster_cells.py  cluster_cells.py  helper_functions.py
AnnoSpat/ipynb/: classify_IMCcells.ipynb  run.ipynb  setup.cfg
