[metadata]
name = AnnoSpat
author = Aanchal Mongia
author_email = aanchal.mongia@pennmedicine.upenn.edu
description = A tool for annotating and inferring patterns in single cells from spatial proteomics

url = https://github.com/aanchalMongia/AnnoSpat

# [options]
# package_dir =
#     = src
# packages = find:
# python_requires = >=3.6

# [options.packages.find]
# where = src

# # [options.entry_points]
# # console_scripts = 
# #     AnnoSpat=AnnoSpat.run:main

[egg_info]
tag_build = 
tag_date = 0